--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
 
     <!-- google fonts -->
     <link href="https://fonts.googleapis.com/css?family=Kanit:400,700|Raleway" rel="stylesheet">
+
+    <!-- animate.css (for wow.js) -->
+    <link rel="stylesheet" type="text/css" href="https://s3-us-west-1.amazonaws.com/carlo-central-cdn-bucket/general/css/animate.css" />
     
     <title>Carlo Antonio Bilbao</title>
   </head>
@@ -47,5 +50,12 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+    <!-- wow.js -->
+    <script type="text/javascript" src="https://s3-us-west-1.amazonaws.com/carlo-central-cdn-bucket/general/js/wow.min.js"></script>
+    <script>
+      new WOW().init();
+    </script>
+
   </body>
 </html>
